--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@
 
 DATABASE_URL="mongodb+srv://misbahul:takin123@misbahul.g8zmyxg.mongodb.net/mern-blog"
 PORT=8800
+JWT_SECRET="wu0m5qef+BpUSSzA5Rxlkw=="
