--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.45.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
