--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-router": "^1.46.4",
     "firebase": "^10.12.5",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "zod": "^3.23.8"
