--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-router": "^1.46.4",
     "firebase": "^10.12.5",
+    "html-react-parser": "^5.1.12",
     "moment": "^2.30.1",
     "quill": "^2.0.2",
     "react": "^18.3.1",
